# Stats-Website

./: .gitignore  Cargo.toml
src/: analyse_summoner.rs  api_structs.rs  game_controller.rs  item_controller.rs  item_structs.rs  main.rs  match_structs.rs  rune_structs.rs  summoner_controller.rs  timeline_structs.rs
templates/: index.html.tera  match.html.tera  profile.html.tera  template.html.tera
templates/css/: style.css
