[package]
name = "LeagueOfLegendsStatsSite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
rocket = "=0.5.0-rc.3"
reqwest = { version = "0.11.21", features = ["blocking"] }
syn = "2.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"